Included additional data

--- a/index.html
+++ b/index.html
@@ -4,18 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dr. Muralidhar Panchagnula - Healthcare Management Consultant</title>
-    <meta name="description" content="Dr. Muralidhar Panchagnula (h.c.) - Senior Advisory Consultant with 30+ years experience in Healthcare Management, Project Management, and Corporate Hospital Management. ISB Alumni specializing in healthcare innovation and leadership." />
+    <meta
+      name="description"
+      content="Dr. Muralidhar Panchagnula (h.c.) - Senior Advisory Consultant with 30+ years experience in Healthcare Management, Project Management, and Corporate Hospital Management. ISB Alumni specializing in healthcare innovation and leadership."
+    />
     <meta name="author" content="Dr. Muralidhar Panchagnula" />
-    <meta name="keywords" content="healthcare management, medical consultant, healthcare advisor, hospital management, medical ethics, healthcare training, project management, healthcare innovation" />
+    <meta
+      name="keywords"
+      content="healthcare management, medical consultant, healthcare advisor, hospital management, medical ethics, healthcare training, project management, healthcare innovation"
+    />
 
-    <meta property="og:title" content="Dr. Muralidhar Panchagnula - Healthcare Management Consultant" />
-    <meta property="og:description" content="Senior Advisory Consultant with 30+ years experience in Healthcare Management. ISB Alumni specializing in healthcare innovation and leadership." />
+    <meta
+      property="og:title"
+      content="Dr. Muralidhar Panchagnula - Healthcare Management Consultant"
+    />
+    <meta
+      property="og:description"
+      content="Senior Advisory Consultant with 30+ years experience in Healthcare Management. ISB Alumni specializing in healthcare innovation and leadership."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
